-
Bug
-
Resolution: Done
-
P1: Critical
-
6.4, 6.5
-
None
-
fd01ad1e99 (qt/qtdeclarative/dev) fd01ad1e99 (qt/tqtc-qtdeclarative/dev) 31ba19cc04 (qt/qtdeclarative/6.4) 31ba19cc04 (qt/tqtc-qtdeclarative/6.4) 68192641b6 (qt/qtdeclarative/6.4.0) 68192641b6 (qt/tqtc-qtdeclarative/6.4.0)
The "fix" in QTBUG-79280 broke Android's "Back" button, as there is no platform specific mapping for QKeySequence::Cancel to Qt::Key_Back. Instead it maps to Qt::Key_Escape (the default) and so you cannot close dialogs with the back buttons anymore.
The result is that some apps are not usable anymore, because they rely on the back button as the only means to close a dialog (which is perfectly fine behavior an Android).
- is blocked by
-
QTCREATORBUG-27776 "No compiler can produce code for this Qt version" when importing Qt for Android build
-
- Reported
-
- resulted from
-
QTBUG-79280 Closing Popup with escape key does not close the expected popup
-
- Closed
-
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTBUG-104535 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 431201,2 | QQuickPopup: Close popup on "Back" keypress on Android | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 431363,2 | QQuickPopup: Close popup on "Back" keypress on Android | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 431364,2 | QQuickPopup: Close popup on "Back" keypress on Android | 6.4.0 | qt/qtdeclarative | Status: MERGED | +2 | 0 |