QQuickPopup: Close popup on "Back" keypress on Android

The Android Navigation Bar has a "Back button", which is processed in qt
as a key press event.

Apparently, it's supposed to act as a swiss army knife of escaping
contexts in application, which includes closing of popups.

Fixes: QTBUG-104535
Change-Id: I4a359946f93c8dc04da734c5f54264e4dbdd3211
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit fd01ad1e99879f9cf5b30fde79ad0bca3230c7c1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>